--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="rx+retrofit上传"/>
-
+    <Button
+        android:id="@+id/me_btn_rx_uploade"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="me"/>
 
     <com.daimajia.numberprogressbar.NumberProgressBar
         android:id="@+id/number_progress_bar"
